--- a/IndoorPositioningSystem/app/src/main/res/layout/activity_main.xml
+++ b/IndoorPositioningSystem/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,7 @@
             android:paddingBottom="@dimen/activity_vertical_margin"
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
+            android:background="@color/colorPrimary"
             android:paddingTop="@dimen/activity_vertical_margin"
             tools:context="com.nellymincheva.indoorpositioningsystem.MainActivity">
 
@@ -25,6 +26,10 @@
                 android:layout_height="match_parent"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentStart="true">
+
+                <SearchView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
 
                 <Button
                     android:text="Add venue"
